ensure no gap under continue button on iphone X

--- a/src/pages/integrations/gift-cards/buy-card/buy-card.scss
+++ b/src/pages/integrations/gift-cards/buy-card/buy-card.scss
@@ -25,4 +25,10 @@ buy-card-page {
       margin-bottom: 30px;
     }
   }
+
+  ion-footer {
+    ion-toolbar {
+      background: $color-primary
+    }
+  }
 }
